--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
         <title>Blogi Admin Area</title>
     </head>
     <body>
-        
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-1">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">Blogi</a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#collapsable">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsable">
+                    <ul class="navbar-nav">
+                        <li class="nav-item px-2"></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
