--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
 
         <title>Blogi Admin Area</title>
     </head>
@@ -19,7 +21,37 @@
                 </button>
                 <div class="collapse navbar-collapse" id="collapsable">
                     <ul class="navbar-nav">
-                        <li class="nav-item px-2"></li>
+                        <li class="nav-item px-2">
+                            <a href="index.html" class="nav-link active">Dashbord</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a href="index.html" class="nav-link">Posts</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a href="index.html" class="nav-link">Categories</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a href="index.html" class="nav-link">Users</a>
+                        </li>
+                    </ul>
+
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item dropdown mr-3">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Welcome <span id="username" class="mr-1">Amir</span></a>
+                            <div class="dropdown-menu">
+                                <a href="profile.html" class="dropdown-item">
+                                    <i class="fa fa-user-circle mr-2"></i>Profile
+                                </a>
+                                <a href="setting.html" class="dropdown-item">
+                                    <i class="fa fa-cog mr-2"></i>Settings
+                                </a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="fa fa-sign-out-alt mr-1"></i>Logout
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
