--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
             </div>
         </nav>
 
+        <header id="main-header" class="bg-primary py-3 text-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1 class="m-0 p-0">
+                            <i class="fa fa-tachometer-alt"></i>
+                            Dashbord
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </header>
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
