--- a/index.html
+++ b/index.html
@@ -70,6 +70,36 @@
             </div>
         </header>
 
+        <!--ACTIONS-->
+        <section id="actions" class="bg-light">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-md-3">
+                        <a href="#" class="btn btn-info btn-block py-2" data-toggle="modal" data-target="#post-modal">
+                            <i class="fa fa-plus mr-1"></i>Add Post
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#" class="btn btn-success btn-block py-2" data-toggle="modal" data-target="#category-modal">
+                            <i class="fa fa-plus mr-1"></i>
+                            Add Category
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#" class="btn btn-warning btn-block py-2" data-toggle="modal" data-target="#user-modal">
+                            <i class="fa fa-plus mr-1"></i>
+                            Add User
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--POST-MODAL-->
+            <div class="modal fade" id="post-modal">
+                
+            </div>
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
