--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Blogi Admin Area</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-1">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark p-1">
             <div class="container">
                 <a href="index.html" class="navbar-brand">Blogi</a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#collapsable">
@@ -72,21 +72,21 @@
 
         <!--ACTIONS-->
         <section id="actions" class="bg-light">
-            <div class="container py-5">
+            <div class="container py-3">
                 <div class="row">
                     <div class="col-md-3">
-                        <a href="#" class="btn btn-info btn-block py-2" data-toggle="modal" data-target="#post-modal">
+                        <a href="#" class="btn btn-info btn-block py-2 my-2" data-toggle="modal" data-target="#post-modal">
                             <i class="fa fa-plus mr-1"></i>Add Post
                         </a>
                     </div>
                     <div class="col-md-3">
-                        <a href="#" class="btn btn-success btn-block py-2" data-toggle="modal" data-target="#category-modal">
+                        <a href="#" class="btn btn-success btn-block py-2 my-2" data-toggle="modal" data-target="#category-modal">
                             <i class="fa fa-plus mr-1"></i>
                             Add Category
                         </a>
                     </div>
                     <div class="col-md-3">
-                        <a href="#" class="btn btn-warning btn-block py-2" data-toggle="modal" data-target="#user-modal">
+                        <a href="#" class="btn btn-warning btn-block py-2 my-2" data-toggle="modal" data-target="#user-modal">
                             <i class="fa fa-plus mr-1"></i>
                             Add User
                         </a>
@@ -95,15 +95,244 @@
             </div>
         </section>
 
-        <!--POST-MODAL-->
-            <div class="modal fade" id="post-modal">
-                
+        <!--BODY-->
+        <section id="body">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Latest posts</h4>
+                            </div>
+                            <table class="table table-striped">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Title</th>
+                                        <th scope="col">Category</th>
+                                        <th scope="col">Date posted</th>
+                                        <th scope="col"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td scope="row">1</td>
+                                        <td>Lorem ipsum</td>
+                                        <td>dolor</td>
+                                        <td>May 21, 2018</td>
+                                        <td class="text-center">
+                                            <a href="#" class="btn btn-secondary">
+                                                <i class="fa fa-search"></i>
+                                                Details
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row">2</td>
+                                        <td>Lorem ipsum</td>
+                                        <td>dolor</td>
+                                        <td>May 21, 2018</td>
+                                        <td class="text-center">
+                                            <a href="#" class="btn btn-secondary">
+                                                <i class="fa fa-search"></i>
+                                                Details
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row">3</td>
+                                        <td>Lorem ipsum</td>
+                                        <td>dolor</td>
+                                        <td>May 21, 2018</td>
+                                        <td class="text-center">
+                                            <a href="#" class="btn btn-secondary">
+                                                <i class="fa fa-search"></i>
+                                                Details
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row">4</td>
+                                        <td>Lorem ipsum</td>
+                                        <td>dolor</td>
+                                        <td>May 21, 2018</td>
+                                        <td class="text-center">
+                                            <a href="#" class="btn btn-secondary">
+                                                <i class="fa fa-search"></i>
+                                                Details
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row">5</td>
+                                        <td>Lorem ipsum</td>
+                                        <td>dolor</td>
+                                        <td>May 21, 2018</td>
+                                        <td class="text-center">
+                                            <a href="#" class="btn btn-secondary">
+                                                <i class="fa fa-search"></i>
+                                                Details
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-primary text-center text-white mb-2">
+                            <div class="card-body">
+                                <h3>Posts</h3>
+                                <h1 class="display-4 mb-3">
+                                    <i class="fa fa-pencil-alt"></i>
+                                    5
+                                </h1>
+                                <a href="#" class="btn btn-outline-light px-3">View</a>
+                            </div>
+                        </div>
+                        <div class="card bg-success text-center text-white my-2">
+                            <div class="card-body">
+                                <h3>Categories</h3>
+                                <h1 class="display-4 mb-3">
+                                    <i class="fa fa-folder-open"></i>
+                                    3
+                                </h1>
+                                <a href="#" class="btn btn-outline-light px-3">View</a>
+                            </div>
+                        </div>
+                        <div class="card bg-warning text-center text-white my-2">
+                            <div class="card-body">
+                                <h3>Users</h3>
+                                <h1 class="display-4 mb-3">
+                                    <i class="fa fa-user"></i>
+                                    304
+                                </h1>
+                                <a href="#" class="btn btn-outline-light px-3">View</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </section>
+
+        <!--FOOTER-->
+        <footer class="bg-dark py-5 text-white">
+            <div class="container">
+                &copy; All rights reserved <br> Design by Amir Mohseni
+            </div>
+        </footer>
+
+        <!--POST-MODAL-->
+        <div class="modal fade" id="post-modal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header bg-info text-white">
+                        <h5 class="modal-title">Add post</h5>
+                        <button class="close" data-dismiss="modal"><span class="text-white">&times;</span></button>
+                    </div>
+                    <div class="modal-body bg-light">
+                        <form>
+                            <div class="form-group">
+                                <label for="post-modal-form-title">Title</label>
+                                <input type="text" class="form-control" id="post-modal-form-title">
+                            </div>
+                            <div class="form-group">
+                                <label for="post-modal-form-category">Category</label>
+                                <select id="post-modal-form-category" class="form-control">
+                                    <option vlaue="">Category 1</option>
+                                    <option vlaue="">Category 2</option>
+                                    <option vlaue="">Category 3</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="post-modal-form-file">Image</label>
+                                <input type="file" class="form-control" id="post-modal-form-file">
+                            </div>
+                            <div class="form-group">
+                                <label for="post-modal-form-body">
+                                    Body
+                                </label>
+                                <textarea name="cke" type="text" id="post-modal-form-body" class="form-control"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary mr-auto">Save changes</button>
+                        <button class="btn btn-danger" data-dismiss="modal">close</button>
+                    </div>
+                </div>  
+            </div>
+        </div>
+
+        <!--CATEGORY-MODAL-->
+        <div class="modal fade" id="category-modal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header bg-success text-white">
+                        <h5 class="modal-title">Add category</h5>
+                        <button class="close" data-dismiss="modal"><span class="text-white">&times;</span></button>
+                    </div>
+                    <div class="modal-body bg-light">
+                        <form>
+                            <div class="form-group">
+                                <label for="category-modal-form-title">Title</label>
+                                <input type="text" class="form-control" id="category-modal-form-title">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-success mr-auto">Save changes</button>
+                        <button class="btn btn-danger" data-dismiss="modal">close</button>
+                    </div>
+                </div>  
+            </div>
+        </div>
+
+        <!--USER-MODAL-->
+        <div class="modal fade" id="user-modal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header bg-warning text-white">
+                        <h5 class="modal-title">Add user</h5>
+                        <button class="close" data-dismiss="modal"><span class="text-white">&times;</span></button>
+                    </div>
+                    <div class="modal-body bg-light">
+                        <form>
+                            <div class="form-group">
+                                <label for="user-modal-form-name">Name</label>
+                                <input type="text" class="form-control" id="user-modal-form-name">
+                            </div>
+                            <div class="form-group">
+                                <label for="user-modal-form-email">Email</label>
+                                <input type="email" class="form-control" id="user-modal-form-name">
+                            </div>
+                            <div class="form-group">
+                                <label for="user-modal-form-password">Password</label>
+                                <input type="password" class="form-control" id="user-modal-form-password">
+                            </div>
+                            <div class="form-group">
+                                <label for="user-modal-form-confirm-password">Confirm Password</label>
+                                <input type="password" class="form-control" id="user-modal-form-confirm-password">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning mr-auto">Save changes</button>
+                        <button class="btn btn-danger" data-dismiss="modal">close</button>
+                    </div>
+                </div>  
+            </div>
+        </div>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+        <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
+        <script>
+            CKEDITOR.replace( 'cke' );
+        </script>
     </body>
 </html>
