--- a/dashbord.html
+++ b/dashbord.html
@@ -15,23 +15,23 @@
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark p-1">
             <div class="container">
-                <a href="index.html" class="navbar-brand">Blogi</a>
+                <a href="#" class="navbar-brand">Blogi</a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#collapsable">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsable">
                     <ul class="navbar-nav">
                         <li class="nav-item px-2">
-                            <a href="index.html" class="nav-link active">Dashbord</a>
+                            <a href="dashbord.html" class="nav-link active">Dashbord</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a href="index.html" class="nav-link">Posts</a>
+                            <a href="posts.html" class="nav-link">Posts</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a href="index.html" class="nav-link">Categories</a>
+                            <a href="categories.html" class="nav-link">Categories</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a href="index.html" class="nav-link">Users</a>
+                            <a href="users.html" class="nav-link">Users</a>
                         </li>
                     </ul>
 
@@ -75,7 +75,7 @@
             <div class="container py-3">
                 <div class="row">
                     <div class="col-md-3">
-                        <a href="#" class="btn btn-info btn-block py-2 my-2" data-toggle="modal" data-target="#post-modal">
+                        <a href="#" class="btn btn-primary btn-block py-2 my-2" data-toggle="modal" data-target="#post-modal">
                             <i class="fa fa-plus mr-1"></i>Add Post
                         </a>
                     </div>
@@ -86,7 +86,7 @@
                         </a>
                     </div>
                     <div class="col-md-3">
-                        <a href="#" class="btn btn-warning btn-block py-2 my-2" data-toggle="modal" data-target="#user-modal">
+                        <a href="#" class="btn btn-warning btn-block py-2 my-2 text-white" data-toggle="modal" data-target="#user-modal">
                             <i class="fa fa-plus mr-1"></i>
                             Add User
                         </a>
@@ -188,7 +188,7 @@
                                     <i class="fa fa-pencil-alt"></i>
                                     5
                                 </h1>
-                                <a href="#" class="btn btn-outline-light px-3">View</a>
+                                <a href="posts.html" class="btn btn-outline-light px-3">View</a>
                             </div>
                         </div>
                         <div class="card bg-success text-center text-white my-2">
@@ -198,7 +198,7 @@
                                     <i class="fa fa-folder-open"></i>
                                     3
                                 </h1>
-                                <a href="#" class="btn btn-outline-light px-3">View</a>
+                                <a href="categories.html" class="btn btn-outline-light px-3">View</a>
                             </div>
                         </div>
                         <div class="card bg-warning text-center text-white my-2">
@@ -208,7 +208,7 @@
                                     <i class="fa fa-user"></i>
                                     304
                                 </h1>
-                                <a href="#" class="btn btn-outline-light px-3">View</a>
+                                <a href="users.html" class="btn btn-outline-light px-3">View</a>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
         <div class="modal fade" id="post-modal">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
-                    <div class="modal-header bg-info text-white">
+                    <div class="modal-header bg-primary text-white">
                         <h5 class="modal-title">Add post</h5>
                         <button class="close" data-dismiss="modal"><span class="text-white">&times;</span></button>
                     </div>
