--- a/settings.html
+++ b/settings.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="collapsable">
                     <ul class="navbar-nav">
                         <li class="nav-item px-2">
-                            <a href="dashbord.html" class="nav-link active">Dashbord</a>
+                            <a href="dashbord.html" class="nav-link">Dashbord</a>
                         </li>
                         <li class="nav-item px-2">
                             <a href="posts.html" class="nav-link">Posts</a>
@@ -42,7 +42,7 @@
                                 <a href="profile.html" class="dropdown-item">
                                     <i class="fa fa-user-circle mr-2"></i>Profile
                                 </a>
-                                <a href="settings.html" class="dropdown-item">
+                                <a href="setting.html" class="dropdown-item active">
                                     <i class="fa fa-cog mr-2"></i>Settings
                                 </a>
                             </div>
@@ -62,8 +62,8 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h1 class="m-0 p-0">
-                            <i class="fa fa-tachometer-alt"></i>
-                            Dashbord
+                            <i class="fa fa-cog"></i>
+                            Settings
                         </h1>
                     </div>
                 </div>
@@ -75,20 +75,15 @@
             <div class="container py-3">
                 <div class="row">
                     <div class="col-md-3">
-                        <a href="#" class="btn btn-primary btn-block py-2 my-2" data-toggle="modal" data-target="#post-modal">
-                            <i class="fa fa-plus mr-1"></i>Add Post
+                        <a href="dashbord.html" class="btn btn-light btn-block py-2 my-2">
+                            <i class="fas fa-caret-left mr-3"></i>Back to dashbord
                         </a>
                     </div>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-3"></div>
                     <div class="col-md-3">
-                        <a href="#" class="btn btn-success btn-block py-2 my-2" data-toggle="modal" data-target="#category-modal">
-                            <i class="fa fa-plus mr-1"></i>
-                            Add Category
-                        </a>
-                    </div>
-                    <div class="col-md-3">
-                        <a href="#" class="btn btn-warning btn-block py-2 my-2 text-white" data-toggle="modal" data-target="#user-modal">
-                            <i class="fa fa-plus mr-1"></i>
-                            Add User
+                        <a href="#" class="btn btn-success btn-block py-2 my-2">
+                            <i class="fas fa-save mr-3"></i>Save changes
                         </a>
                     </div>
                 </div>
@@ -99,116 +94,44 @@
         <section id="body">
             <div class="container py-4">
                 <div class="row">
-                    <div class="col-md-9">
+                    <div class="col">
                         <div class="card">
                             <div class="card-header">
-                                <h4>Latest posts</h4>
+                                <h4>Edit Settings</h4>
                             </div>
-                            <table class="table table-striped">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">Title</th>
-                                        <th scope="col">Category</th>
-                                        <th scope="col">Date posted</th>
-                                        <th scope="col"></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td scope="row">1</td>
-                                        <td>Lorem ipsum</td>
-                                        <td>dolor</td>
-                                        <td>May 21, 2018</td>
-                                        <td class="text-center">
-                                            <a href="details.html" class="btn btn-secondary">
-                                                <i class="fa fa-search"></i>
-                                                Details
-                                            </a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row">2</td>
-                                        <td>Lorem ipsum</td>
-                                        <td>dolor</td>
-                                        <td>May 21, 2018</td>
-                                        <td class="text-center">
-                                            <a href="details.html" class="btn btn-secondary">
-                                                <i class="fa fa-search"></i>
-                                                Details
-                                            </a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row">3</td>
-                                        <td>Lorem ipsum</td>
-                                        <td>dolor</td>
-                                        <td>May 21, 2018</td>
-                                        <td class="text-center">
-                                            <a href="details.html" class="btn btn-secondary">
-                                                <i class="fa fa-search"></i>
-                                                Details
-                                            </a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row">4</td>
-                                        <td>Lorem ipsum</td>
-                                        <td>dolor</td>
-                                        <td>May 21, 2018</td>
-                                        <td class="text-center">
-                                            <a href="details.html" class="btn btn-secondary">
-                                                <i class="fa fa-search"></i>
-                                                Details
-                                            </a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td scope="row">5</td>
-                                        <td>Lorem ipsum</td>
-                                        <td>dolor</td>
-                                        <td>May 21, 2018</td>
-                                        <td class="text-center">
-                                            <a href="details.html" class="btn btn-secondary">
-                                                <i class="fa fa-search"></i>
-                                                Details
-                                            </a>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card bg-primary text-center text-white mb-2">
                             <div class="card-body">
-                                <h3>Posts</h3>
-                                <h1 class="display-4 mb-3">
-                                    <i class="fa fa-pencil-alt"></i>
-                                    5
-                                </h1>
-                                <a href="posts.html" class="btn btn-outline-light px-3">View</a>
-                            </div>
-                        </div>
-                        <div class="card bg-success text-center text-white my-2">
-                            <div class="card-body">
-                                <h3>Categories</h3>
-                                <h1 class="display-4 mb-3">
-                                    <i class="fa fa-folder-open"></i>
-                                    3
-                                </h1>
-                                <a href="categories.html" class="btn btn-outline-light px-3">View</a>
-                            </div>
-                        </div>
-                        <div class="card bg-warning text-center text-white my-2">
-                            <div class="card-body">
-                                <h3>Users</h3>
-                                <h1 class="display-4 mb-3">
-                                    <i class="fa fa-user"></i>
-                                    304
-                                </h1>
-                                <a href="users.html" class="btn btn-outline-light px-3">View</a>
+                                <form>
+                                    <fieldset class="form-grou mb-5">
+                                        <legend class="mb-2">Example Setting</legend>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="radio" class="form-check-label mr-2" checked>
+                                                sample
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="radio" class="form-check-label mr-2">
+                                                sample
+                                            </label>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="form-grou">
+                                        <legend class="mb-2">Example Setting</legend>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="radio" class="form-check-label mr-2">
+                                                sample
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="radio" class="form-check-label mr-2" checked>
+                                                sample
+                                            </label>
+                                        </div>
+                                    </fieldset>
+                                </form>
                             </div>
                         </div>
                     </div>
